--- a/test1.html
+++ b/test1.html
@@ -49,11 +49,11 @@
                         <li><a href="#">Menu Three</a></li>
                     </ul>
                 </li>
-                <li><a href="staff.html">Our Staff</a></li>
-                <li><a href="news.html">News</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="test1.html">Mentors</a></li>
+                <li><a href="news.html">Courses</a></li>
+                <li><a href="gallery.html">Library</a></li>
+                <li><a href="about.html">Dashborad</a></li>
+                <li><a href="contact.html">About</a></li>
             </ul>
         </div>
     </div>
@@ -97,11 +97,11 @@
                                     <li><a href="#">Menu Three</a></li>
                                 </ul>
                             </li>
-                            <li><a href="test1.html">Our Staff</a></li>
-                            <li><a href="news.html">News</a></li>
-                            <li><a href="gallery.html">Gallery</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="test1.html">Mentors</a></li>
+                            <li><a href="news.html">Courses</a></li>
+                            <li><a href="gallery.html">Library</a></li>
+                            <li><a href="about.html">Dashborad</a></li>
+                            <li><a href="contact.html">About</a></li>
                         </ul>
                         <a href="book-a-table.html" class="btn-book btn btn-primary btn-sm menu-absolute">Enroll Now</a>
                         <a class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none light"
