--- a/test1.html
+++ b/test1.html
@@ -34,19 +34,11 @@
                 <li class="active"><a href="index.html">Home</a></li>
                 <li class="has-children"><span class="arrow-collapse collapsed" data-toggle="collapse"
                         data-target="#collapseItem0" aria-expanded="false"></span>
-                    <a href="#">Dropdown</a>
+                    <a href="#">Dashboard</a>
                     <ul class="collapse" id="collapseItem0">
-                        <li><a href="elements.html">Elements</a></li>
-                        <li class="has-children"><span class="arrow-collapse collapsed" data-toggle="collapse"
-                                data-target="#collapseItem1"></span>
-                            <a href="#">Menu Two</a>
-                            <ul class="collapse" id="collapseItem1">
-                                <li><a href="#">Sub Menu One</a></li>
-                                <li><a href="#">Sub Menu Two</a></li>
-                                <li><a href="#">Sub Menu Three</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Menu Three</a></li>
+                        <li><a href="#">Student</a></li>
+                        <li><a href="#">Parent</a></li>
+                        <li><a href="#">Mentor</a></li>
                     </ul>
                 </li>
                 <li><a href="test1.html">Mentors</a></li>
@@ -85,16 +77,9 @@
                             <li class="has-children">
                                 <a href="#">Dropdown</a>
                                 <ul class="dropdown">
-                                    <li><a href="elements.html">Elements</a></li>
-                                    <li class="has-children">
-                                        <a href="#">Menu Two</a>
-                                        <ul class="dropdown">
-                                            <li><a href="#">Sub Menu One</a></li>
-                                            <li><a href="#">Sub Menu Two</a></li>
-                                            <li><a href="#">Sub Menu Three</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Menu Three</a></li>
+                                    <li><a href="#">Student</a></li>
+                                    <li><a href="#">Parent</a></li>
+                                    <li><a href="#">Mentor</a></li>
                                 </ul>
                             </li>
                             <li><a href="test1.html">Mentors</a></li>
